--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -1664,6 +1664,45 @@ all_dof <- rbind(fantastic_four(routes_w3, "W3"),
 
 write_csv(all_pk, "./hierarchy_analysis_results/durationOfFlow.csv")
 ```
+```{r drainage-area}
+#I was not confident in my R determined values, so I extracted drainage area in Arc. Reading in results
+
+#.csv files with extracted 1m drainage area values, but also contain snapped coords in UTM
+fb_uaa_1m <- read_csv("./STIC_uaa/fb2.csv")
+zz_uaa_1m <- read_csv("./STIC_uaa/zz2.csv")
+w3_uaa_1m <- read_csv("./STIC_uaa/w32.csv")
+
+routes_w3 <- w3_uaa_1m %>% 
+    filter(ID %in% W3_IDs) %>% 
+  rename("up" = ID, "uaa" = RASTERVALU) %>%
+  arrange(desc(uaa)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+routes_fb <- fb_uaa_1m %>%
+    filter(ID %in% FB_IDs) %>% 
+  rename("up" = ID, "uaa" = RASTERVALU) %>%
+  arrange(desc(uaa)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+routes_zz <- zz_uaa_1m %>% 
+    filter(ID %in% ZZ_IDs) %>% 
+  rename("up" = ID, "uaa" = RASTERVALU) %>%
+  arrange(desc(uaa)) %>% 
+  mutate(down = lag(up)) %>% 
+   drop_na() %>% 
+  select(up, down) 
+
+all_uaa <- rbind(fantastic_four(routes_w3, "W3"),
+                 fantastic_four(routes_fb, "FB"),
+                 fantastic_four(routes_zz, "ZZ")) %>% 
+  mutate("hierarchy" = "Drainage Area")
+
+write_csv(all_uaa, "./hierarchy_analysis_results/drainageArea.csv")
+```
 
 ##looping by drainage area UNFINISHED
 Lost in a file hell
@@ -1696,56 +1735,7 @@ plot(rast(streams), add = TRUE, alpha = 0.5)
 
 
 ```
-```{r extract-drainage-area-W3}
-#flow accumulation/upslope drainage area at 3 m resolution calculated earlier in markdown
-#flowacc_output <- "./HB/1m hydro enforced DEM/dem3m_flowacc.tif"
-locs <- data_24 %>% 
-  filter(wshed == "W3") %>% 
-  select(number, lat, long) %>% 
-  rename("ID" = number) %>% 
-  unique()
-#convert STIC data to a SpatVector data format
-locs_shape <- vect(locs, 
-                   geom=c("long", "lat"), 
-                   crs = "+proj=longlat +datum=WGS84")
 
-plot(locs_shape)
-#reproject coordinates from WGS84 to NAD83 19N, which is the projection of raster
-lcc <- terra::project(locs_shape, crs(rast(flowacc_output)))
-plot(lcc)
-#snap points to lines using wbt
-#use 5 m lines? or convert 1 m dem based shapefiles to raster
-#for some reason 5m w3 raster is not working, but I can use the other ones I do believe
-# found already snapped W3 STIC locations
-# To make the raster work: read in using raster package, then save as a new file
-test <- raster::raster("HB/hbstream/w3_5m.tif")
-writeRaster(test, "actualW3_shed.tif", overwrite = TRUE)
-#path for point locations, before snapping
-w3_lcc_path <- "./mapsForStoryboardFiles/w3_stics.shp"
-writeVector(lcc, w3_lcc_path, overwrite = TRUE)
-#path for point locations after snapping
-w3_lcc_path_snap <- "./mapsForStoryboardFiles/w3_stics_snapped.shp"
-#snap the points with whitebox
-wbt_jenson_snap_pour_points(pour_pts = w3_lcc_path,
-                            streams = "actualW3_shed.tif",
-                            output = w3_lcc_path_snap,
-                            snap_dist = 10)
-#testing and s eeing that 
-plot(rast("actualW3_shed.tif"), col = 'purple')
-
-plot(test)
-plot(vect(w3_lcc_path_snap), add = TRUE)
-plot(vect(w3_lcc_path), add = TRUE, col = "red")
-plot(vect("w3_stic_locs_snap.shp"))
-w3_stics <- (vect("w3_stic_locs_snap.shp"))
-
-#calculate for W3
-
-plot(rast("HB/hbstream/zz_5m.tif"))
-W3_uaa_ex <- extract(rast(flowacc_output), w3_stics) #should be in units of 3 m2, so 200 is 600 m2 I 
-
-#make list that makes pairs of sites based on topography
-```
 ```{extract-drainage-area-FB}
 #calculate for FB
 locs <- data_24 %>% 
@@ -1830,71 +1820,8 @@ plot(rast(zz_streams))
 plot(vect(zz_lcc_path_snap), add = TRUE)
 ```
 
-```{r uaa-from-1m-arc}
-#I was not confident in my R determined values, so I extracted drainage area in Arc. Reading in results
-
-fb_uaa_1m <- read_csv("./STIC_uaa/fb2.csv")
-zz_uaa_1m <- read_csv("./STIC_uaa/zz2.csv")
-w3_uaa_1m <- read_csv("./STIC_uaa/w32.csv")
-
-routes_w3 <- w3_uaa_1m %>% 
-    filter(ID %in% W3_IDs) %>% 
-  rename("up" = ID, "uaa" = RASTERVALU) %>%
-  arrange(desc(uaa)) %>% 
-  mutate(down = lag(up)) %>% 
-   drop_na() %>% 
-  select(up, down) 
-
-routes_fb <- fb_uaa_1m %>%
-    filter(ID %in% FB_IDs) %>% 
-  rename("up" = ID, "uaa" = RASTERVALU) %>%
-  arrange(desc(uaa)) %>% 
-  mutate(down = lag(up)) %>% 
-   drop_na() %>% 
-  select(up, down) 
-
-routes_zz <- zz_uaa_1m %>% 
-    filter(ID %in% ZZ_IDs) %>% 
-  rename("up" = ID, "uaa" = RASTERVALU) %>%
-  arrange(desc(uaa)) %>% 
-  mutate(down = lag(up)) %>% 
-   drop_na() %>% 
-  select(up, down) 
-
-```
 
 
-```{r drainage-area}
-#make list that make pairs of sites based on local persistency
-#old routes
-# routes_w3 <- W3_uaa_ex %>% 
-#   rename("up" = ID, "uaa" = 'dem3m_flowacc') %>%
-#   arrange(desc(uaa)) %>% 
-#   mutate(down = lag(up)) %>% 
-#    drop_na() %>% 
-#   select(up, down) 
-# 
-# routes_fb <- FB_uaa_ex %>%
-#   rename("up" = ID, "uaa" = 'dem3m_flowacc') %>%
-#   arrange(desc(uaa)) %>% 
-#   mutate(down = lag(up)) %>% 
-#   drop_na() %>% 
-#   select(up, down)
-# 
-# routes_zz <- ZZ_uaa_ex %>%
-#   rename("up" = ID, "uaa" = 'dem3m_flowacc') %>%
-#   arrange(desc(uaa)) %>% 
-#   mutate(down = lag(up)) %>%
-#   drop_na() %>% 
-#   select(up, down)
-
-all_uaa <- rbind(fantastic_four(routes_w3, "W3"),
-                 fantastic_four(routes_fb, "FB"),
-                 fantastic_four(routes_zz, "ZZ")) %>% 
-  mutate("hierarchy" = "Drainage Area")
-
-write_csv(all_uaa, "./hierarchy_analysis_results/drainageArea.csv")
-```
 
 #add randomly generate hierarchies
 Structure of functions:
@@ -4000,7 +3927,106 @@ Extract elevation along the streams (might need ARC), then plot versus distance
 Use sensor locations snapped on ARC computer to extract different topographic metrics; metrics can be calculated here in R using whitebox tools.
 ##multilinear regression
 ```{r}
+#get snapped sensor locations from extracted values from arc
+w3_locs <- read_csv("./STIC_uaa/w32.csv")%>% 
+  select(ID, POINT_X, POINT_Y)
+fb_locs <- read_csv("./STIC_uaa/fb2.csv") %>% 
+  select(ID, POINT_X, POINT_Y)
+zz_locs <- read_csv("./STIC_uaa/zz2.csv")%>% 
+  select(ID, POINT_X, POINT_Y)
+```
 
+```{r extract-topography-W3}
+#flow accumulation/upslope drainage area at 3 m resolution calculated earlier in markdown
+flowacc_output <- "./HB/1m hydro enforced DEM/dem3m_flowacc.tif"
+
+#convert STIC data to a SpatVector data format
+locs_shape <- vect(w3_locs, 
+                   geom=c("POINT_X", "POINT_Y"), 
+                   crs = crs(rast(flowacc_output))) #set crs to NAD 83
+
+# To make the raster work: read in using raster package, then save as a new file
+test <- raster::raster("HB/hbstream/w3_5m.tif")
+writeRaster(test, "actualW3_shed.tif", overwrite = TRUE)
+plot(rast("actualW3_shed.tif"), col = 'purple')
+plot(locs_shape, add = TRUE)
+
+#calculate 10m DEM, then breach and fill
+dem <- "./HB/1m hydro enforced DEM/dem1m.tif"
+m1 <- rast(dem)
+m10 <- aggregate(m1, 10)
+#save raster, because whitebox wants it is a files location instead of an object in R
+writeRaster(m10, "./w3_dems/10mdem.tif", overwrite = TRUE)
+
+
+breach_output <- "./w3_dems/10mdem_breach.tif"
+wbt_breach_depressions_least_cost(
+  dem = "./fb_dems/10mdem.tif",
+  output = breach_output,
+  dist = 10,
+  fill = TRUE)
+
+fill_output <- "./w3_dems/10mdem_fill.tif"
+wbt_fill_depressions_wang_and_liu(
+  dem = breach_output,
+  output = fill_output
+)
+
+#flow accumulation/drainage area
+flowacc_output <- "./w3_dems/10mdem_flowacc.tif"
+wbt_d_inf_flow_accumulation(input = fill_output,
+                            output = flowacc_output,
+                            out_type = "Specific Contributing Area")
+#Slope
+slope_output <- "./w3_dems/10mdem_slope.tif"
+wbt_slope(dem = fill_output,
+          output = slope_output,
+          units = "degrees")
+#calculate TPI
+tpi_output <- "./w3_dems/10mdem_tpi.tif"
+wbt_relative_topographic_position(
+    dem = fill_output, 
+    output = tpi_output, 
+    filterx=11, 
+    filtery=11)
+#TWI
+twi_output <- "./w3_dems/10mdem_twi.tif"
+wbt_wetness_index(sca = flowacc_output, #flow accumulation
+                  slope = slope_output,
+                  output = twi_output)
+
+
+#drainage area from ARC
+
+#extract values
+bind_cols(extract(rast(flowacc_output), locs_shape),
+          extract(rast(slope_output), locs_shape),
+          extract(rast(twi_output), locs_shape),
+          extract(rast(tpi_output), locs_shape),
+          by = "ID")
+W3_uaa_ex <- extract(rast(flowacc_output), locs_shape)
+
+
+rast(twi_output)#should be in units of 3 m2, so 200 is 600 m2 I 
+
+#make list that makes pairs of sites based on topography
+
+#final output, make sure to add pk
+W3_topo_pk <- W3_uaa_ex %>% 
+  rename("uaa" = '10mdem_flowacc') %>%
+  left_join(pks_w3, by = "ID")
+FB_topo_pk <- FB_uaa_ex %>% 
+  rename("uaa" = '10mdem_flowacc') %>%
+  left_join(pks_fb, by = "ID")
+ZZ_topo_pk <- ZZ_uaa_ex %>% 
+  rename("uaa" = '10mdem_flowacc') %>%
+  left_join(pks_zz, by = "ID")
+
+rbind(W3_topo_pk, FB_topo_pk, ZZ_topo_pk) 
+```
+
+```{r}
+#use reformatted df with sensor flow permanence and topo metrics in a multilinear regression
 ```
 
 ##random forest
